@@ -1,6 +1,6 @@
 AUX no-bundled-boost.patch 527 SHA256 a1e8322cd340b81602be072949858273267c35ac91e957c103377bda7c3b08e1 SHA512 9d8d0f95260b465f925fbc7b1f1b5b8a1e3c647f712c5bf78c47c93bf23ba9669cb0c4f0dcba076a41cfdc42945d3819939d1176d49696e93aa1eef61d4918dc WHIRLPOOL d394f2a546ac43afd2fc746cbf37b1689e51975be62a135722d1e1ef1e5d1c22ba5e866d4f24ad6bf9f5e34366a756572db17d135320e81357fc17eabc989474
-AUX no-bundled-quazip.patch 1235 SHA256 a6ba34b327e68e3a1436b911ad13978186161cc642bb4d36d8b60cd442a4a3ff SHA512 d6c4c38d9370142d9eaf044c4bce4e70bec2a79fc47fdb09d4d5ebb0fd7232d5867f588854949024a696623c2b4b1107351f4ce8a01f7e0325d3c5216b6e91c2 WHIRLPOOL e663f2f7457024037fa6a428b0a091a6c693f25f8407de1c1a99a8fe10dec673754c180cdb41ad1fa0a2baa43bc769707cc263191770e5ec0ad6cd586ebb54cc
-DIST fritzing-0.7.7b.source.tar.bz2 10998036 SHA256 9888b0af0ca6456ff319c6e411ca5ec88d09814c5d495db027997254045cef46 SHA512 eb5d523add35f5eda537ad9722be64bf48dbb2cf245fb6c9a2bc247606cc1283723ab5d7591c36e07836e11e1f85f6ff94a38c5ef98610d505784caae80bdba0 WHIRLPOOL 90c155da42fc9cc1ca5856d3092166dee86a479549b69d39ebb9c1a63f32c4b4a99dae288e94acccfe9548d24ae90c53c686a665fc78d229af4109f1b76fe856
-EBUILD fritzing-0.7.7b.ebuild 1500 SHA256 9f3b1bf6bd8fc9bffca9abb0c94c2d33d6a2235325bdbf43c4ddbbc01a6d9016 SHA512 4aa25e1a42506ac7dbcd88943b62198f210a2d27c9fe6be40e172a13f0f53f5a76d11b6eeb36689a9971bd724cbbf57c81773043eb201aa0e2ab3073637afb83 WHIRLPOOL 4f544d3e8a9b90d03107dfe1427f3efc6ab21b8947603e8ec4b06497c2c9c348493a44c68833b8c07f46cb624c8d554c0f8421b1bea3b8d767ca7428e7941549
-MISC ChangeLog 232 SHA256 d4de467f2d9011fc0a18b3a790af4403c8e763ca760891d0dc31447572d0c0dc SHA512 95e8c1d75260434062061fb35b19601d803bf207b441a033cd59f1b5340cb6e36664dda019c34acae51ab3f06f5a4c8c3630a36928c4590ef049ba25741a4853 WHIRLPOOL c67a19b2c03a51dd0303582f3a27d7d88a0f374e954f7f521deed79ed40c22e10dde746df9c511e480538b34cdc427b730886a70cd12ce417b6581c22d4bb324
+AUX no-bundled-quazip.patch 1241 SHA256 a3945617ef2c90d885f15649c721fc8e291ca19af35e2f1c3543b21a7b5819e8 SHA512 276323039328d8c899869f25d479b97a0e5154c253c396a50eb73539863bedcdc758991de5f0816090aa29d8e14c24abf3489305cce704dd702c0e64a1db9e65 WHIRLPOOL 672b1676ac1ef1b4c5d57f6da29414d148508a239008e376c33386e18ced83525eb15c58d2885828f93ff9ad26784aad91cb87f14042464680bd6485e5e86a8b
+DIST fritzing-0.7.9b.source.tar.bz2 12888404 SHA256 41481e9b202f0b38b9c3cf694cb1fc0796bee0c6952e7b9b958074d15ad9da28 SHA512 14efe18ca7865e895fb0d9cc0908ccd67b698abf28fa7c7031c8d4980896227755f7b09eda60f53309ed4336f6d54bb7d293ee7576bb31daf6196d0302e7ff01 WHIRLPOOL f50915ea3bdc351e80ae10e85033524dd41f014c074b89e55c4c60671b29e657d739913f94a9c120e4161de2233f4b026710449d2ae79beea2223946ef2c116d
+EBUILD fritzing-0.7.9b.ebuild 1492 SHA256 fda61877fbe3da00110385759e88aeef3eb47a937e25d7370eebeba692d0ec91 SHA512 c037768701cbfe404da0aaafa55ebc3306c950bfa77ead9767271a5fa6dfa0e89c34c2e2eebaec56600c05d28aa957c290aa4628715cc2292038bbe5a851641b WHIRLPOOL 29b20629b7a809b1899bab03637b548e2a6f4d24b4b8e975f8ac17c3a300dc88b86b4cd85380b0d442a400becfd3d63303996da4e43a7c9b0acf6af7fb7db6a5
+MISC ChangeLog 441 SHA256 a7001deeefbb57ceb8fea7e165f9f2ed3812806acc641b33c9637c0c98fadfc3 SHA512 00f0dde7bc8528e9cac1a27c61db27e9c9624bb1cb6dea3f74790436785f55f0c7b094516c2dd349d2c3defa5765cb57f5e571d0d83c7060f469cc11dd2082b5 WHIRLPOOL 57bdc5115fcda98be78c464c1c41f649fc1c6849f2a421d45f3a5749a0f125f47384eee673f93065380b95ef3c7034113df4841d01172811bf58bb5a300c0782
 MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
