@@ -23,7 +23,7 @@ Index: pri/utils.pri
 ===================================================================
 --- pri/utils.pri	(revision 5978)
 +++ pri/utils.pri	(working copy)
-@@ -69,5 +67,4 @@
+@@ -67,5 +65,4 @@
  src/utils/textutils.cpp \
  src/utils/zoomslider.cpp 
  
@@ -35,9 +35,9 @@ Index: phoenix.pro
 --- phoenix.pro	(revision 5978)
 +++ phoenix.pro	(working copy)
 @@ -106,7 +106,6 @@
- RC_FILE = fritzing.rc
  RESOURCES += phoenixresources.qrc
  	include(pri/kitchensink.pri)
+	include(pri/mainwindow.pri)
 -	include(pri/quazip.pri)
  	include(pri/partsbinpalette.pri)
  	include(pri/partseditor.pri)
