@@ -1,3 +1,9 @@
+*fritzing-0.7.9b (14 Oct 2012)
+
+  14 Oct 2012; Manuel Rueger (mrueg) gentoo@rueg.eu +fritzing-0.7.9b.ebuild,
+  -fritzing-0.7.7b.ebuild, files/no-bundled-quazip.patch:
+  sci-electronics/fritzing: Version bump
+
 *fritzing-0.7.7b (22 Sep 2012)
 
   22 Sep 2012; Manuel Rueger (mrueg) gentoo@rueg.eu
